fix(carousel): Correct dragging on ios

--- a/src/demo/styles/demo.css
+++ b/src/demo/styles/demo.css
@@ -7,13 +7,13 @@ body {
 }
 
 #mount {
-  padding-left: 16px;
+  padding-left: 12px;
   padding-right: 8px;
   height:100%;
 }
 
 .is-small-screen #mount {
-  padding-left: 16px;
+  padding-left: 4px;
   padding-right: 4px;
 }
 
